--- a/public/output.css
+++ b/public/output.css
@@ -1,4 +1,3 @@
-
 /*
 ! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
 */
@@ -585,6 +584,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .invisible {
   visibility: hidden;
 }
@@ -814,6 +817,10 @@ video {
   margin-top: -16px;
 }
 
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -856,6 +863,22 @@ video {
 
 .h-px {
   height: 1px;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[540px\] {
+  height: 540px;
+}
+
+.h-\[px\] {
+  height: px;
+}
+
+.h-\[720px\] {
+  height: 720px;
 }
 
 .w-1\/2 {
@@ -1423,13 +1446,16 @@ video {
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
 }
-@media (min-width: 64px) {
-    .xs\:m-0 {
-      margin: 0;
-    }
-  }
-  
+
 @media (min-width: 640px) {
+  .sm\:mr-2 {
+    margin-right: 0.5rem;
+  }
+
+  .sm\:ml-2 {
+    margin-left: 0.5rem;
+  }
+
   .sm\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -1440,13 +1466,6 @@ video {
   .md\:visible {
     visibility: visible;
   }
-@media screen and (min-width: 50px) {
-  .px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-}
-
 
   .md\:order-3 {
     order: 3;
