--- a/src/index.css
+++ b/src/index.css
@@ -426,8 +426,18 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
 img,
 video {
   max-width: 100%;
-  height: auto;
+  height: 440px;
 }
+/*
+@media (min-width: 768px) and (max-width: 1024px) {
+  md:img,
+  md:video {
+    max-width: 100%;
+    height: 450px;
+  }
+}
+
+
 
 /* Make elements with the HTML hidden attribute stay hidden by default */
 
@@ -651,6 +661,11 @@ video {
   margin-right: 0.5rem;
 }
 
+.mx-4 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -709,7 +724,12 @@ video {
 .ml-12 {
   margin-left: 3rem;
 }
-
+.ml-20 {
+  margin-left: 75px;
+}
+.ml-13 {
+  margin-left: 41px;
+}
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -741,7 +761,9 @@ video {
 .mr-11 {
   margin-right: 2.75rem;
 }
-
+.mr-21 {
+  margin-right: 5rem;
+}
 .mr-12 {
   margin-right: 3rem;
 }
@@ -770,8 +792,8 @@ video {
   margin-top: 0.25rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.mt-20 {
+  margin-top: 6rem;
 }
 
 .mt-2 {
@@ -878,9 +900,6 @@ video {
   width: 2rem;
 }
 
-.w-\[50\%\] {
-  width: 50%;
-}
 
 .w-\[65\%\] {
   width: 65%;
@@ -1208,7 +1227,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(162 95 75 / var(--tw-text-opacity));
 }
-
+.bg-coffee-400 {
+  --tw-text-opacity: 1;
+  color: rgb(162 95 75 / var(--tw-text-opacity));
+}
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -1238,6 +1260,17 @@ video {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: red;
+}
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: blue;
+}
+
+
 
 .text-gray-950 {
   --tw-text-opacity: 1;
@@ -1395,6 +1428,11 @@ video {
   background-color: rgb(200 159 148 / var(--tw-bg-opacity));
 }
 
+.hover:after:bg-gray-700:hover::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
 @-webkit-keyframes fadeIn {
   from {
     opacity: 0;
@@ -1422,6 +1460,11 @@ video {
 
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
+}
+
+.group:hover .group-hover\:opacity-100 {
+  opacity: 1;
+  color: 'coffee-400'
 }
 @media (min-width: 64px) {
     .xs\:m-0 {
@@ -1455,6 +1498,21 @@ video {
   .md\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
+  }
+  .md\:mt-3 {
+    margin-top: 12px;
+  }
+  .lg\:ml-52{
+    margin-left: 208px;
+  }
+
+  .lg\:mr-52 {
+    margin-right: 208px;
+  }
+
+  .md\:mx-6 {
+    margin-left: 8px;
+    margin-right: 8px;
   }
 
   .md\:mx-auto {
@@ -1492,6 +1550,10 @@ video {
 
   .md\:mt-0 {
     margin-top: 0px;
+  }
+
+  .md\:mt-2 {
+    margin-top: 8rempx;
   }
 
   .md\:flex {
@@ -1599,5 +1661,10 @@ video {
 
   .xl\:pl-14 {
     padding-left: 3.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .md\:w-1\/2 {
+      width: 50%;
   }
 }
